ui fixes + starting dark mode

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -5,6 +5,7 @@
 html,
 body {
   scroll-behavior: smooth;
+  @apply bg-gray-50 dark:bg-gray-800 dark:text-gray-50;
 }
 
 h1 {
